<resources>
    <string name="app_name">Mi SUBE</string>
    <string name="action_settings">Configuración</string>

    <!-- TABS -->
    <string name="tab_saldo">Mi Tarjeta</string>
    <string name="tab_mapa">Donde Cargar</string>

    <!-- View Mi Tarjeta -->
    <string name="label_title_card">Saldo Actual</string>
    <string name="label_pesos">$</string>
    <string name="initial_value">0,0</string>
    <string name="label_movimientos">No hay movimientos registrados.</string>
    <string name="btn_add_trip">Registrar un viaje</string>
    <string name="btn_add_credit">Registrar una carga</string>

    <!-- View Movimientos -->
    <string name="title_activity_movimientos">Movimientos</string>

    <!-- View Mapa -->
    <string name="label_distance">Distancia</string>
    <string name="button_route">Ver Ruta</string>
    <string name="label_hours">Horarios</string>
    <string name="label_seller">Vende SUBE</string>
    <string name="label_chargecost">Cobra por cargar</string>
    <string name="label_type">Tipo de Lugar</string>
    <string name="title_filter_view">Filtrar puntos del mapa</string>
    <string name="label_hide_points">OCULTAR PUNTOS DE CARGA</string>
    <string name="label_option_hours">Fuera de horario de atención</string>
    <string name="label_option_cargecost">@string/label_chargecost</string>
    <string name="label_option_noseller">No venden SUBE</string>
    <string name="label_option_novisiblehours">No indican horario de atención</string>

    <!-- View Configuración -->
    <string name="title_activity_config">@string/action_settings</string>
    <string name="title_settings_card">Ajustes de tarjeta</string>
    <string name="label_remove_card">Borrar Tarjeta</string>
    <string name="title_about_us">Acerca de</string>
    <string name="btn_libs_oss">Librerias utilizadas</string>
    <string name="btn_review">Calificanos</string>
    <string name="label_app_version">Versión</string>

    <!-- WebView -->
    <string name="title_webview_about_us">Sobre Mi SUBE</string>
    <string name="title_webview_oss_libs">Nos ayudaron</string>
    <string name="title_webview_changelog">Cambios Realizados</string>

    <!-- RouteView -->
    <string name="title_activity_punto_de_carga_route">Ruta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="button_allow">Aceptar</string>
    <string name="button_deny">Cancelar</string>



</resources>
