<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".fragments.ConfigActivityFragment"
    tools:showIn="@layout/activity_config"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/title_settings_card"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        style="@style/titleConfigView" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/switch_remove_card"
        style="@style/SwitchConfig"
        android:text="@string/label_remove_card"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:background="@drawable/border_bottom_divider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/title_about_us"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        style="@style/titleConfigView" />

    <!-- buttons -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/app_name"
        android:id="@+id/btn_about_us"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        style="@style/textConfig"
        android:background="@drawable/border_bottom_divider"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/btn_libs_oss"
        android:id="@+id/btn_oss_libs"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        style="@style/textConfig"
        android:background="@drawable/border_bottom_divider"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/btn_review"
        android:id="@+id/btn_review"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        style="@style/textConfig"
        android:background="@drawable/border_bottom_divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:background="@drawable/border_bottom_divider">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:text="@string/label_app_version"
            style="@style/textConfig"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:id="@+id/label_app_version"
            style="@style/textConfig" />

    </LinearLayout>

</LinearLayout>
