<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".fragments.SaldoViewFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/carview"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/primary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_title_card"
                android:textColor="@color/text_color_70"
                android:textSize="12sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_gravity="top">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/icons"
                    android:textSize="18sp"
                    android:gravity="top"
                    android:layout_marginTop="-40dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/label_pesos"
                    android:layout_marginRight="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/icons"
                    android:fontFamily="sans-serif-thin"
                    android:textSize="80sp"
                    android:gravity="top"
                    android:id="@+id/view_saldo"
                    android:text="@string/initial_value"
                    tools:targetApi="jelly_bean" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".8"
                    android:layout_height="wrap_content"
                    android:textColor="@color/icons"
                    android:id="@+id/label_moves"
                    android:text="@string/label_movimientos"/>

                <Button
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:id="@+id/btn_open_move_list"
                    android:background="@drawable/ic_error_outline"/>

            </LinearLayout>



        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
